add type coercion support
