# src/api/http/convert.rs
@@ -61,6 +61,7 @@ mod tests {
                 dtype: DTypeName::Utf8,
                 nullable: false,
                 key: true,
+                strict: true,
             },
         );
         columns.insert(
@@ -69,6 +70,7 @@ mod tests {
                 dtype: DTypeName::Float32,
                 nullable: true,
                 key: false,
+                strict: true,
             },
         );
         columns.insert(
@@ -77,6 +79,7 @@ mod tests {
                 dtype: DTypeName::Float64,
                 nullable: true,
                 key: false,
+                strict: true,
             },
         );
         TableSchema { columns }
